--- a/themes/hugrid/static/css/component.css
+++ b/themes/hugrid/static/css/component.css
@@ -44,7 +44,7 @@
 	margin-top: 10px;
 	text-align: left;
 	height: 0;
-	overflow: hidden;
+	overflow: scroll;
 }
 
 .og-expander-inner {
@@ -90,7 +90,7 @@
 	width: 50%;
 	float: left;
 	height: 100%;
-	overflow: hidden;
+	overflow: scroll;
 	position: relative;
 }
 
@@ -111,7 +111,6 @@
 .og-details h3 {
 	font-weight: 300;
 	font-size: 52px;
-	padding: 40px 0 10px;
 	margin-bottom: 10px;
 }
 
